# emai-iot-esp32-adaptive-sampler

./: .gitignore  ASSIGNMENT.md  CMakeLists.txt  README.md
arduino/: platformio.ini
arduino/src/: fft.cpp  fft.h  filter.cpp  main.cpp  mqtt_client.cpp  mqtt_client.h  sampler.cpp  signal.cpp
esp32/: PLAN.md  platformio.ini
esp32/src/: config.hpp  config.hpp.example  fft.cpp  fft.hpp  filter.cpp  filter.hpp  logger.hpp  lorawan_client.cpp  lorawan_client.hpp  main.cpp  mqtt_client.cpp  mqtt_client.hpp  power.cpp  power.hpp  signal.cpp  signal.hpp
firmware/: UPDATE-SUMMARY.md  platformio.ini
firmware/src/: fft.cpp  fft.hpp  filter.cpp  main.cpp  sampler.cpp  sampler.hpp  signal.cpp  signal.hpp
iot-lab/: platformio.ini
iot-lab-test/: platformio.ini
iot-lab-test/src/: main.cpp
iot-lab/src/: fft.hpp  filter.cpp  filter.hpp  main.cpp  sampler.hpp  signal.cpp  signal.hpp
logs/: mqtt_1.json  mqtt_1.txt  mqtt_10.txt  mqtt_2.json  mqtt_2.txt  mqtt_3.json  mqtt_3.txt  mqtt_4.txt  mqtt_5.txt  mqtt_6.txt  mqtt_7.txt  mqtt_8.txt  mqtt_9.txt  serial_1.txt  serial_3.txt  serial_4.txt  serial_5.txt  serial_6.txt  signal_data_4.csv  signal_timeseries_4.csv  ttn_10.json  ttn_6.json  ttn_7.json  ttn_8.json
plots/: tables.txt
results/: fft_results.txt  mqtt_results.txt  sampler_results.txt  window_tradeoff_results.txt
results/simulation/: fft_contamination_results.txt  fft_results.txt  filter_results.txt
scripts/: load_mqtt.py  plot_adaptive_rates.py  plot_current_timeline.py  plot_data_volume_latency.py  plot_e2e_latency.py  plot_energy_savings.py  plot_mean_error.py  plot_signal.py  plot_signal_noisy.py  plot_tpr_comparison.py  plot_tpr_fpr.py  plot_tpr_vs_w.py  plot_window_tradeoff.py  plot_windowed_average.py  print_adaptive_rates.py  print_data_volume.py  print_tpr_fpr.py  print_window_tradeoff.py  print_windowed_average.py  signal.csv  signal_noisy.csv
simulation/: CMakeLists.txt
simulation/results/: filter_multi_results.txt  lorawan_results.txt  mqtt_results.txt  signal_noisy.csv  signal_noisy_results.txt  signals_comparison_results.txt
simulation/src/: filter.cpp  lorawan_client.h  sampler.cpp  sampler.h
simulation/tests/: test_fft.cpp  test_fft_contamination.cpp
src/: fft.cpp  fft.h  filter.h  lorawan_client.cpp  mqtt_client.cpp  mqtt_client.h  signal.cpp  signal.h
tests/: test_fft.cpp  test_filter.cpp  test_lorawan.cpp  test_mqtt.cpp  test_sampler.cpp  test_signal.cpp  test_signal_noisy.cpp  test_signals_comparison.cpp  test_window_tradeoff.cpp
